// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component > SelectStops renders correctly with no feed data 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="Selection"
  >
    Selection
  </label>
  <Button
    block={true}
    onClick={[Function]}
  >
    New
  </Button>
  <div
    className="alert alert-info"
    role="alert"
  >
    <Icon
      icon={
        Object {
          "icon": Array [],
          "iconName": "exclamation-circle",
          "prefix": "fas",
        }
      }
    />
    Click 'New', then draw a polygon around the stops you wish to select.
  </div>
</div>
`;

exports[`Component > SelectStops renders correctly with some selected stops 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="Selection"
  >
    Selection
  </label>
  <Group>
    <Button
      onClick={[Function]}
    >
      Add to
    </Button>
    <Button
      onClick={[Function]}
    >
      Remove from
    </Button>
    <Button
      onClick={[Function]}
    >
      Clear
    </Button>
  </Group>
  <SelectedStops
    selectedStops={
      Array [
        Object {
          "stop_id": "1",
          "stop_lat": 36.9707,
          "stop_lon": -122.0246,
          "stop_name": "Santa Cruz",
        },
      ]
    }
  />
</div>
`;
